# mindmapper3

./: .dockerignore  .gitignore  Dockerfile  MindMapper2.0_Roadmap.md  README.md  chunk_map.html  http_requests_basics.md  mindmapper3_env.yaml  pyproject.toml
configs/: README.md  base.yaml
data/: README.md
data/experiments/: pdf_extraction_20250915_173210.md
docs/: README.md
document_data/clean_txt/: clean_txt_20251103_000230.md  clean_txt_20251103_000232.md  clean_txt_20251103_000424.md  clean_txt_20251103_143251.md  clean_txt_20251103_143409.md  clean_txt_20251103_143529.md  clean_txt_20251103_144423.md  clean_txt_20251103_175338.md  clean_txt_20251103_175445.md  clean_txt_20251103_175731.md  clean_txt_20251103_175807.md  clean_txt_20251103_175920.md  clean_txt_20251103_180330.md  clean_txt_20251103_180817.md  clean_txt_20251103_180930.md  clean_txt_20251103_181025.md  clean_txt_20251103_181131.md  clean_txt_20251103_181143.md
document_data/raw_txt/: test.txt
k8s/: configmap.yaml  deployment.yaml  service.yaml
scripts/: README.md  hello_pipeline.py  pdf_ingestion.py  text_processing.py  txt_cleaner.py
src/: README.md
src/mindmapper/: pipeline.py
src/mindmapper/cleaning/: TextProcessor.py
src/mindmapper/embedding/: ChunkEmbedder.py
src/mindmapper/extraction/: PDFExtractor.py  __init__.py
src/mindmapper/summarizing/: ClusterSummarizer.py  __init__.py
src/mindmapper/web/: app.py
src/scripts/: chunk_embed_map.py  graph_chunk_clusters.py  run_pipeline.py  txt_ingestion.py
src/utils/: env_get_helper.py  nltk_helpers.py
tests/: README.md
(+5 files in other folders)
